[tool.poetry]
name = "openbbmetrics"
version = "0.1.0"
description = ""
authors = ["guanquann"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
requests = "^2.27.1"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
praw = "^7.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
